package dev.fredpena.designpattern.creational.abstractfactory;

/**
 * @author me@fredpena.dev
 * @created 11/09/2025  - 22:56
 */
public interface GUIFactory {
    Button createButton();
    Checkbox createCheckbox();
}